--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Abishek Kandan K.S</title>
     <meta name="description" content="Portfolio of Abishek Kandan, an Electronics & Communication Engineer passionate about technology, embedded systems, and software development." />
+    <link rel="icon" type="image/png" href="/logoA.png" />
   </head>
   <body>
     <div id="root"></div>
